updated background & fixed spacing.. still working on font

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,6 @@
 p {
-  font-size: 14px; }
+  font-size: 14px; 
+  font-weight: bold;}
 
 
 .navbar-default .navbar-toggle {
@@ -75,6 +76,7 @@ ul.nav a.active {
 
 body {
   font-family: Courier New, Courier, monospace;
+  font-weight: bold;
   text-align: center; }
 
 .apply {
@@ -144,7 +146,7 @@ a.sh-button:link {
     left: -30px;
     color: #faf8f3;
     display: inline-block;
-    padding: 7px 20px 0; }
+    padding: 7px 20px 9px 20px; }
 
 .organize {
   box-sizing: content-box;
@@ -205,6 +207,7 @@ a.sh-button:link {
     margin: 15px;
     padding: 10px; }
   .faq-col h3 {
+    font-weight: 600;
     margin: 0 0 15px;
     padding: 0; }
   .faq-col p {
@@ -349,8 +352,8 @@ body {
 #home h3 {
     /* margin: 0 auto; */
     color: white;
-    font-weight: normal;
-    font-size: 2rem;
+    font-weight: bold;
+    font-size: 2.5rem;
     /* font-family: Arial, Helvetica, sans-serif; */
     font-family: Courier New, Courier, monospace;
 }
@@ -359,6 +362,7 @@ body {
 #cta {
     color: white;
     width: 300px;
+    font-weight: bold;
     font-family: Courier New, Courier, monospace;
 }
 
@@ -398,7 +402,8 @@ section h1 {
   margin-bottom: 20px; 
 }
 .plain {
-  font-size: 1.1em; 
+  font-size: 1em; 
+  font-weight: bold;
   margin: 0; 
   padding: 20px 75px; 
   text-align: justify; 
